# nft-pinner

./: Cargo.toml  build.rs
abi/: ERC721.json
src/: main.rs
src/bindings/: erc165.rs  erc721.rs  mod.rs
