[package]
name = "nft-pinner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
eyre = "0.3.7"
tokio = { version = "1.19.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
